--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 AC_PREREQ(2.50)
 AC_INIT(gphoto2/main.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gphoto2, 2.1.1rc4)
+AM_INIT_AUTOMAKE(gphoto2, 2.1.1)
 AM_MAINTAINER_MODE
 
 dnl ---------------------------------------------------------------------------
@@ -324,7 +324,7 @@ AM_CONDITIONAL(HAVE_RL, $have_readline)
 AC_SUBST(RL_LIBS)
 AC_SUBST(RL_CFLAGS)
 
-AC_OUTPUT([
+AC_OUTPUT([ intl/Makefile po/Makefile.in m4/Makefile 
 Makefile
 gphoto2/Makefile
 doc/Makefile
