--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 AC_PREREQ(2.50)
 AC_INIT(gphoto2/main.c)
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(gphoto2, 2.1.5head)
+AM_INIT_AUTOMAKE(gphoto2, 2.1.6rc1)
 AM_MAINTAINER_MODE
 
 
