--- a/configure.ac
+++ b/configure.ac
@@ -7,21 +7,6 @@ AC_CONFIG_MACRO_DIR([auto-m4])
 AC_CONFIG_AUX_DIR([auto-aux])
 AM_INIT_AUTOMAKE([-Wall -Werror gnu 1.9 dist-bzip2 check-news])
 
-if test ! -d "$srcdir/m4m"; then
-AC_MSG_ERROR([
-You are missing the m4m/ directory in your top
-$PACKAGE_TARNAME source directory.
-
-You are probably using an ill-maintained SVN tree.
-Running
-
-    cd $srcdir
-    svn up
-
-and re-running autogen.sh might help.
-])
-fi
-
 GP_CHECK_SHELL_ENVIRONMENT
 GP_CONFIG_MSG([Build])
 GP_CONFIG_MSG([Source code location],[${srcdir}])
@@ -361,7 +346,7 @@ AC_CONFIG_FILES([
 po/Makefile.in 
 Makefile
 gphoto2/Makefile
-m4m/Makefile
+m4/Makefile
 doc/Makefile
 contrib/Makefile
 packaging/Makefile
