Uniformly use gphoto-m4/ for own macros, m4/ for auto

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@ dnl Next stable release must be 2.5.3 or later
 AC_INIT([gphoto2 command line interface], [2.5.2.1], [gphoto-devel@lists.sourceforge.net], [gphoto2])
 AC_CONFIG_SRCDIR([gphoto2/main.c])
 AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_MACRO_DIR([auto-m4])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([auto-aux])
 AM_INIT_AUTOMAKE([-Wall -Werror gnu 1.9 dist-bzip2 check-news])
 
@@ -346,7 +346,7 @@ AC_CONFIG_FILES([
 po/Makefile.in 
 Makefile
 gphoto2/Makefile
-m4/Makefile
+gphoto-m4/Makefile
 doc/Makefile
 contrib/Makefile
 packaging/Makefile
