--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = m4 contrib doc gphoto2 packaging po tests
+SUBDIRS = gphoto-m4 contrib doc gphoto2 packaging po tests
 
-ACLOCAL_AMFLAGS = -I auto-m4 -I m4
+ACLOCAL_AMFLAGS = -I m4 -I gphoto-m4
